--- a/app/src/main/res/layout/activity_dog_list.xml
+++ b/app/src/main/res/layout/activity_dog_list.xml
@@ -7,10 +7,25 @@
 
     </data>
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recycler_dog"
+    <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:context=".doglist.DogListActivity" />
+        android:layout_height="match_parent">
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recycler_dog"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            tools:context=".doglist.DogListActivity" />
+
+        <ProgressBar
+            android:id="@+id/progress_bar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:indeterminate="true"
+            android:layout_gravity="center"
+            android:visibility="gone"
+            tools:visibility="visible" />
+
+    </FrameLayout>
 
 </layout>
