--- a/app/src/main/res/layout/activity_dog_detail.xml
+++ b/app/src/main/res/layout/activity_dog_detail.xml
@@ -5,7 +5,7 @@
     <data>
         <variable
             name="dog"
-            type="com.rpm.dogedexapp.Dog" />
+            type="com.rpm.dogedexapp.model.Dog" />
     </data>
 
     <FrameLayout
