--- a/app/src/main/res/layout/dog_list_item.xml
+++ b/app/src/main/res/layout/dog_list_item.xml
@@ -21,6 +21,17 @@
                 android:layout_height="match_parent"
                 android:adjustViewBounds="true" />
 
+            <TextView
+                android:id="@+id/dog_index"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:textColor="@android:color/white"
+                android:fontFamily="sans-serif-light"
+                android:layout_centerInParent="true"
+                android:gravity="center"
+                android:padding="16dp"
+                android:textSize="32sp" />
+
         </RelativeLayout>
 
     </FrameLayout>
