--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,7 +11,7 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".MainActivity">
+        tools:context=".main.MainActivity">
 
         <androidx.camera.view.PreviewView
             android:id="@+id/camera_preview"
@@ -47,6 +47,14 @@
             android:src="@drawable/settings_24"
             android:contentDescription="@string/this_is_a_content_description"
             android:layout_margin="16dp" />
+
+        <ProgressBar
+            android:id="@+id/loading_wheel"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:visibility="gone"
+            tools:visibility="visible" />
 
     </RelativeLayout>
 
